--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
   <script>
     const allQuestions = [
       { question: "1 IN 50 MILLION, FROM RED TO THE COLOR OF THE SEA", answer: "blue lobster" },
-      { question: "WHAT TERRIFYING DEEP-SEA CREATURE HAS A BIOLUMINESCENT LURE?", answer: "anglerfish" },
-      { question: "THE DEEPEST KNOWN PART OF THE OCEAN (TWO WORDS)", answer: "mariana trench" },
-      { question: "THIS DEEP-SEA FISH HAS A TRANSPARENT HEAD AND TUBULAR EYES", answer: "barreleye" },
-      { question: "PERCENTAGE OF EARTH'S OCEANS THAT ARE DEEP SEA (ABOVE 50%)", answer: ["90%", "ninety percent", "90 percent"] },
+      { question: "BORN FROM STONE, YET ALIVE I GROW; MY ARMS EMBRACE BUT NEVER LET GO.", answer: "coral" },
+      { question: "A MOUNTAIN THAT WALKS, A FOREST THAT HIDES; I BREATHE THROUGH MY TAIL, AND DANCE ON THE TIDES.", answer: "whale shark" },
+      { question: "I SPEAK WITHOUT LIPS, AND ANSWER WITHOUT THOUGHT; SAILORS FEAR MY WHISPER, FOR IT’S THE ONLY SOUND I’VE CAUGHT", answer: "the bloop" },
+      { question: "I’M A GIANT THAT DOESN’T GROW, A TRAVELER WITH NO FEET. I CAN DROWN SHIPS BUT NEVER DRINK.", answer: "a wave" },
       { question: "THIS DEEP-SEA CREATURE CAN STRETCH ITS STOMACH TO SWALLOW PREY LARGER THAN ITSELF", answer: ["black swallower", "black swallower fish"] },
-      { question: "THE LARGEST KNOWN DEEP-SEA CREATURE (TWO WORDS)", answer: "giant squid" },
+      { question: "EYES BIGGER THAN PLATES IN A REALM WITHOUT SUN, MY WRITHING SHADOW MAKES WHALES TURN TO RUN—YET I'M TORN APART BY WHAT'S GREEN WHEN IT'S DONE.", answer: "giant squid" },
       { question: "THIS DEEP-SEA JELLYFISH LOOKS LIKE A FLOATING ALIEN SPACESHIP", answer: ["bloodybelly", "bloodybelly comb jelly"] }
     ];
 
