--- a/index.html
+++ b/index.html
@@ -1,315 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Deep Sea Quiz</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:wght@400;700&family=Orbitron:wght@500&family=Russo+One&family=Tektur:wght@500&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --deep-blue: #001a33;
-      --ocean-teal: #00c8c8;
-      --bioluminescent: #00ffea;
-      --bubble-color: rgba(255, 255, 255, 0.1);
+<script>
+  // Base64 encoded question-answer pairs
+  const encodedData = [
+    { q: "MSBJTlsgNTAgTUlMTElPTiwgRlJPTSBSRUQgVE8gVEhFIENPTE9SIG9mIFRIRSBTRUE=", a: "Ymx1ZSBsb2JzdGVy" },
+    { q: "Qk9STiBGUk9NIFNUT05FLCBZRVRBTElWRSBJIEdST1c7IE15IEFSTVMgRU1CUkFDRSBCVVQgTkVWRVIgTEVUIEdP", a: "Y29yYWw=" },
+    { q: "QSBNT1VOVEFJTiBUSEFUIFdBTFBLUywgQSBGT1JFU1QgVEhBVCBISURFUzsgSSBCUkVBVEggVEhST1VHSCBNWSBUQUlMLCBBTkQgREFOQ0UgT04gVEhFIFRJRURT", a: "d2hhbGUgc2hhcms=" },
+    { q: "SSBTRA==IFdJVEhPVVQgTElQUywgQU5EIFRIRSBPTkxZIFNPVU5EIEknVkUgQ0FVZ0hU", a: "dGhlIGJsb29w" },
+    { q: "SSdNIEEgR0lBTlQgVEhBVCBET0VTIE5PVEdST1csIEEgVFJBVkVMRVIgV0lUSE9VVCBOTyBGRUVULiBJIENBTiBETVJPV04gU0hJUFMgQlVUIE5FVkVSIERSSU5L", a: "YSB3YXZl" }
+  ];
+
+  // Simple Base64 decoder
+  function decodeBase64(str) {
+    try {
+      return decodeURIComponent(escape(atob(str)));
+    } catch {
+      return "[Decoding error]";
     }
+  }
 
-    body {
-      background-color: var(--deep-blue);
-      color: var(--ocean-teal);
-      text-align: center;
-      font-family: 'Kanit', sans-serif;
-      background-image: radial-gradient(circle at center, rgba(0, 10, 30, 0.9) 0%, rgba(0, 40, 80, 0.7) 100%), url('https://source.unsplash.com/1920x1080/?deepsea,marine,abyss');
-      background-size: cover;
-      background-attachment: fixed;
-      min-height: 100vh;
-      margin: 0;
-      padding: 20px;
-      overflow: hidden;
-      position: relative;
+  // Decode all questions and answers
+  const allQuestions = encodedData.map(pair => ({
+    question: decodeBase64(pair.q),
+    answer: decodeBase64(pair.a)
+  }));
+
+  const selectedQuestions = allQuestions.sort(() => 0.5 - Math.random()).slice(0, 5);
+  let currentQuestionIndex = 0;
+
+  function updateQuestion() {
+    if (currentQuestionIndex < selectedQuestions.length) {
+      const q = selectedQuestions[currentQuestionIndex];
+      document.getElementById("currentQuestion").textContent = q.question;
+      document.getElementById("questionNum").textContent = `QUESTION ${currentQuestionIndex + 1} OF 5`;
+      document.getElementById("answerInput").value = "";
+      document.getElementById("response").className = "response";
+      document.getElementById("response").textContent = "";
+      document.getElementById("progressBar").style.width = `${(currentQuestionIndex / selectedQuestions.length) * 100}%`;
+    } else {
+      document.getElementById("currentQuestion").textContent = "QUESTIONS COMPLETED!";
+      document.getElementById("questionNum").textContent = "COMPLETED";
+      document.getElementById("answerInput").style.display = "none";
+      document.querySelector("button").style.display = "none";
+      document.getElementById("progressBar").style.width = "100%";
+      document.getElementById("codeDisplay").style.display = "block";
     }
+  }
 
-    .bubbles {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 0;
+  function checkAnswer() {
+    const userAnswer = document.getElementById("answerInput").value.toLowerCase().trim();
+    const responseEl = document.getElementById("response");
+    const currentQ = selectedQuestions[currentQuestionIndex];
+    const correct = userAnswer === currentQ.answer.toLowerCase();
+
+    if (correct) {
+      responseEl.textContent = "✓ CORRECT!";
+      responseEl.className = "response correct show";
+      currentQuestionIndex++;
+      setTimeout(updateQuestion, 1000);
+    } else {
+      responseEl.textContent = "✗ INCORRECT - TRY AGAIN";
+      responseEl.className = "response incorrect show";
     }
+  }
 
-    .bubble {
-      position: absolute;
-      bottom: -50px;
-      width: 15px;
-      height: 15px;
-      background: var(--bubble-color);
-      border-radius: 50%;
-      animation: rise 10s linear infinite;
-    }
-
-    @keyframes rise {
-      0% {
-        transform: translateY(0) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-110vh) scale(0.5);
-        opacity: 0;
-      }
-    }
-
-    .header {
-      margin-bottom: 40px;
-      z-index: 2;
-      position: relative;
-    }
-
-    .title {
-      font-family: 'Russo One', sans-serif;
-      font-size: 4rem;
-      color: #003366;
-      text-shadow: 0 0 15px var(--bioluminescent);
-      letter-spacing: 3px;
-    }
-
-    .question-number {
-      font-family: 'Tektur', sans-serif;
-      font-size: 1.5rem;
-      color: var(--bioluminescent);
-      margin-bottom: 5px;
-    }
-
-    .progress-container {
-      width: 100%;
-      max-width: 500px;
-      height: 10px;
-      background: rgba(0, 191, 255, 0.2);
-      border-radius: 10px;
-      margin: 20px auto;
-    }
-
-    .progress-bar {
-      height: 100%;
-      background: linear-gradient(90deg, var(--ocean-teal), var(--bioluminescent));
-      width: 0%;
-      transition: width 0.5s ease;
-      border-radius: 10px;
-    }
-
-    .container {
-      background: rgba(0, 20, 40, 0.9);
-      padding: 40px 50px;
-      border-radius: 20px;
-      width: 85%;
-      max-width: 700px;
-      margin: 0 auto;
-      box-shadow: 0 0 40px rgba(0, 200, 255, 0.4);
-      position: relative;
-      z-index: 2;
-    }
-
-    .question {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 2rem;
-      margin-bottom: 40px;
-      min-height: 100px;
-    }
-
-    .answer-box {
-      padding: 18px 30px;
-      font-size: 1.3rem;
-      background: rgba(0, 40, 80, 0.8);
-      color: white;
-      border: 2px solid var(--ocean-teal);
-      border-radius: 15px;
-      width: 80%;
-      max-width: 500px;
-      margin: 0 auto 30px;
-    }
-
-    .answer-box:focus {
-      outline: none;
-      border-color: var(--bioluminescent);
-      background: rgba(0, 60, 120, 0.9);
-    }
-
-    button {
-      background: linear-gradient(to right, var(--ocean-teal), var(--bioluminescent));
-      color: var(--deep-blue);
-      padding: 18px 45px;
-      border: none;
-      border-radius: 15px;
-      font-weight: bold;
-      font-size: 1.3rem;
-      cursor: pointer;
-      font-family: 'Bebas Neue', sans-serif;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-    }
-
-    .response {
-      margin-top: 30px;
-      font-size: 1.5rem;
-      font-weight: bold;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-
-    .response.show {
-      opacity: 1;
-    }
-
-    .correct {
-      color: #00ff88;
-    }
-
-    .incorrect {
-      color: #ff5555;
-    }
-
-    .code-display {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 2rem;
-      margin-top: 40px;
-      color: var(--bioluminescent);
-      padding: 20px;
-      border: 1px solid var(--ocean-teal);
-      border-radius: 10px;
-      background: rgba(0, 0, 0, 0.4);
-      display: none;
-    }
-
-    @media (max-width: 768px) {
-      .title {
-        font-size: 2.8rem;
-      }
-
-      .question {
-        font-size: 1.6rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="bubbles" id="bubbles"></div>
-
-  <div class="header">
-    <div class="title">THE DEEP SEA</div>
-    <div class="question-number" id="questionNum">QUESTION 1 OF 5</div>
-    <div class="progress-container">
-      <div class="progress-bar" id="progressBar"></div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="question" id="currentQuestion"></div>
-    <input type="text" class="answer-box" id="answerInput" placeholder="ENTER YOUR ANSWER..." autocomplete="off">
-    <button onclick="checkAnswer()">SUBMIT</button>
-    <div class="response" id="response"></div>
-    <div class="code-display" id="codeDisplay">YOUR CODE: XK7B9M2R</div>
-  </div>
-
-  <script>
-    // Plain text questions and answers (fully working version)
-    const allQuestions = [
-      { 
-        question: "1 IN 50 MILLION, FROM RED TO THE COLOR OF THE SEA", 
-        answer: "blue lobster" 
-      },
-      { 
-        question: "BORN FROM STONE, YET ALIVE I GROW; MY ARMS EMBRACE BUT NEVER LET GO.", 
-        answer: "coral" 
-      },
-      { 
-        question: "A MOUNTAIN THAT WALKS, A FOREST THAT HIDES; I BREATHE THROUGH MY TAIL, AND DANCE ON THE TIDES.", 
-        answer: "whale shark" 
-      },
-      { 
-        question: "I SPEAK WITHOUT LIPS, AND ANSWER WITHOUT THOUGHT; SAILORS FEAR MY WHISPER, FOR IT'S THE ONLY SOUND I'VE CAUGHT", 
-        answer: "the bloop" 
-      },
-      { 
-        question: "I'M A GIANT THAT DOESN'T GROW, A TRAVELER WITH NO FEET. I CAN DROWN SHIPS BUT NEVER DRINK.", 
-        answer: "a wave" 
-      },
-      { 
-        question: "THIS DEEP-SEA CREATURE CAN STRETCH ITS STOMACH TO SWALLOW PREY LARGER THAN ITSELF", 
-        answer: ["black swallower", "black swallower fish"] 
-      },
-      { 
-        question: "EYES BIGGER THAN PLATES IN A REALM WITHOUT SUN, MY WRITHING SHADOW MAKES WHALES TURN TO RUN—YET I'M TORN APART BY WHAT'S GREEN WHEN IT'S DONE.", 
-        answer: "giant squid" 
-      },
-      { 
-        question: "THIS DEEP-SEA JELLYFISH LOOKS LIKE A FLOATING ALIEN SPACESHIP", 
-        answer: ["bloodybelly", "bloodybelly comb jelly"] 
-      }
-    ];
-
-    // Select 5 random questions
-    const selectedQuestions = allQuestions.sort(() => 0.5 - Math.random()).slice(0, 5);
-    let currentQuestionIndex = 0;
-
-    function updateQuestion() {
-      if (currentQuestionIndex < selectedQuestions.length) {
-        const q = selectedQuestions[currentQuestionIndex];
-        document.getElementById("currentQuestion").textContent = q.question;
-        document.getElementById("questionNum").textContent = `QUESTION ${currentQuestionIndex + 1} OF 5`;
-        document.getElementById("answerInput").value = "";
-        document.getElementById("response").className = "response";
-        document.getElementById("response").textContent = "";
-        document.getElementById("progressBar").style.width = `${(currentQuestionIndex / selectedQuestions.length) * 100}%`;
-      } else {
-        document.getElementById("currentQuestion").textContent = "QUESTIONS COMPLETED!";
-        document.getElementById("questionNum").textContent = "COMPLETED";
-        document.getElementById("answerInput").style.display = "none";
-        document.querySelector("button").style.display = "none";
-        document.getElementById("progressBar").style.width = "100%";
-        document.getElementById("codeDisplay").style.display = "block";
-      }
-    }
-
-    function checkAnswer() {
-      const userAnswer = document.getElementById("answerInput").value.toLowerCase().trim();
-      const responseEl = document.getElementById("response");
-      const currentQ = selectedQuestions[currentQuestionIndex];
-      let correct = false;
-
-      if (Array.isArray(currentQ.answer)) {
-        correct = currentQ.answer.includes(userAnswer);
-      } else {
-        correct = userAnswer === currentQ.answer;
-      }
-
-      if (correct) {
-        responseEl.textContent = "✓ CORRECT!";
-        responseEl.className = "response correct show";
-        currentQuestionIndex++;
-        setTimeout(updateQuestion, 1000);
-      } else {
-        responseEl.textContent = "✗ INCORRECT - TRY AGAIN";
-        responseEl.className = "response incorrect show";
-      }
-    }
-
-    document.addEventListener('DOMContentLoaded', function() {
-      updateQuestion();
-      document.getElementById("answerInput").addEventListener("keypress", function(e) {
-        if (e.key === "Enter") checkAnswer();
-      });
-
-      // Bubble animation
-      const bubblesContainer = document.getElementById("bubbles");
-      setInterval(() => {
-        const bubble = document.createElement("div");
-        bubble.classList.add("bubble");
-        bubble.style.left = `${Math.random() * 100}%`;
-        bubble.style.animationDuration = `${6 + Math.random() * 4}s`;
-        bubble.style.width = bubble.style.height = `${10 + Math.random() * 10}px`;
-        bubblesContainer.appendChild(bubble);
-        setTimeout(() => bubble.remove(), 10000);
-      }, 300);
+  document.addEventListener('DOMContentLoaded', function() {
+    updateQuestion();
+    document.getElementById("answerInput").addEventListener("keypress", function(e) {
+      if (e.key === "Enter") checkAnswer();
     });
-  </script>
-</body>
-</html>
+
+    // Bubble animation
+    const bubblesContainer = document.getElementById("bubbles");
+    setInterval(() => {
+      const bubble = document.createElement("div");
+      bubble.classList.add("bubble");
+      bubble.style.left = `${Math.random() * 100}%`;
+      bubble.style.animationDuration = `${6 + Math.random() * 4}s`;
+      bubble.style.width = bubble.style.height = `${10 + Math.random() * 10}px`;
+      bubblesContainer.appendChild(bubble);
+      setTimeout(() => bubble.remove(), 10000);
+    }, 300);
+  });
+</script>
