--- a/index.html
+++ b/index.html
@@ -212,11 +212,10 @@
   <script>
   function decoder(base64String) {
   try {
-    const binary = atob(base64String);
-    const bytes = new Uint8Array([...binary].map(char => char.charCodeAt(0)));
-    return new TextDecoder('utf-8').decode(bytes);
+    const decoded = Uint8Array.from(atob(base64String), c => c.charCodeAt(0));
+    return new TextDecoder("utf-8", { fatal: true }).decode(decoded);
   } catch (err) {
-    console.error("Decoding failed for:", base64String, err);
+    console.error("Decoder error:", err);
     return "[Invalid encoded data]";
   }
 }
