--- a/index.html
+++ b/index.html
@@ -6,144 +6,186 @@
   <title>The Deep Sea Quiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:wght@400;700&family=Orbitron:wght@500&family=Russo+One&family=Tektur:wght@500&display=swap" rel="stylesheet">
   <style>
+     :root {
+      --deep-blue: #001a33;
+      --ocean-teal: #00c8c8;
+      --bioluminescent: #00ffea;
+      --bubble-color: rgba(255, 255, 255, 0.1);
+    }
+
     body {
+      background-color: var(--deep-blue);
+      color: var(--ocean-teal);
+      text-align: center;
       font-family: 'Kanit', sans-serif;
-      background-color: #021d2b;
-      color: #ffffff;
+      background-image: radial-gradient(circle at center, rgba(0, 10, 30, 0.9) 0%, rgba(0, 40, 80, 0.7) 100%), url('https://source.unsplash.com/1920x1080/?deepsea,marine,abyss');
+      background-size: cover;
+      background-attachment: fixed;
+      min-height: 100vh;
       margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      padding: 20px;
       overflow: hidden;
       position: relative;
     }
 
-    .header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .title {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 60px;
-      color: #00bcd4;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-    }
-
-    .question-number {
-      font-family: 'Russo One', sans-serif;
-      font-size: 20px;
-      color: #ffffff;
-      margin-top: 10px;
-    }
-
-    .progress-container {
-      margin-top: 20px;
-      width: 100%;
-      background-color: #444;
-      height: 5px;
-    }
-
-    .progress-bar {
-      height: 100%;
-      width: 0;
-      background-color: #00bcd4;
-    }
-
-    .container {
-      text-align: center;
-      padding: 20px;
-      border: 1px solid #00bcd4;
-      border-radius: 10px;
-      width: 300px;
-      background-color: #1d2d3b;
-    }
-
-    .question {
-      font-size: 20px;
-      margin-bottom: 20px;
-    }
-
-    .answer-box {
-      width: 80%;
-      padding: 10px;
-      font-size: 18px;
-      border: none;
-      border-radius: 5px;
-      margin-bottom: 20px;
-      background-color: #444;
-      color: #ffffff;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      background-color: #00bcd4;
-      color: white;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    button:hover {
-      background-color: #0288d1;
-    }
-
-    .response {
-      margin-top: 10px;
-      font-size: 18px;
-      display: none;
-    }
-
-    .response.show {
-      display: block;
-    }
-
-    .correct {
-      color: #4caf50;
-    }
-
-    .incorrect {
-      color: #f44336;
-    }
-
-    .code-display {
-      display: none;
-      font-size: 18px;
-      margin-top: 20px;
-      padding: 10px;
-      background-color: #444;
-      border-radius: 5px;
-      color: #00bcd4;
-    }
-
     .bubbles {
       position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       pointer-events: none;
       overflow: hidden;
+      z-index: 0;
     }
 
     .bubble {
       position: absolute;
+      bottom: -50px;
+      width: 15px;
+      height: 15px;
+      background: var(--bubble-color);
       border-radius: 50%;
-      background-color: rgba(255, 255, 255, 0.3);
-      animation: bubbleAnimation 5s infinite ease-in-out;
+      animation: rise 10s linear infinite;
     }
 
-    @keyframes bubbleAnimation {
+    @keyframes rise {
       0% {
-        transform: translateY(100vh) scale(0);
+        transform: translateY(0) scale(1);
         opacity: 1;
       }
       100% {
-        transform: translateY(-100vh) scale(1);
+        transform: translateY(-110vh) scale(0.5);
         opacity: 0;
+      }
+    }
+
+    .header {
+      margin-bottom: 40px;
+      z-index: 2;
+      position: relative;
+    }
+
+    .title {
+      font-family: 'Russo One', sans-serif;
+      font-size: 4rem;
+      color: #003366;
+      text-shadow: 0 0 15px var(--bioluminescent);
+      letter-spacing: 3px;
+    }
+
+    .question-number {
+      font-family: 'Tektur', sans-serif;
+      font-size: 1.5rem;
+      color: var(--bioluminescent);
+      margin-bottom: 5px;
+    }
+
+    .progress-container {
+      width: 100%;
+      max-width: 500px;
+      height: 10px;
+      background: rgba(0, 191, 255, 0.2);
+      border-radius: 10px;
+      margin: 20px auto;
+    }
+
+    .progress-bar {
+      height: 100%;
+      background: linear-gradient(90deg, var(--ocean-teal), var(--bioluminescent));
+      width: 0%;
+      transition: width 0.5s ease;
+      border-radius: 10px;
+    }
+
+    .container {
+      background: rgba(0, 20, 40, 0.9);
+      padding: 40px 50px;
+      border-radius: 20px;
+      width: 85%;
+      max-width: 700px;
+      margin: 0 auto;
+      box-shadow: 0 0 40px rgba(0, 200, 255, 0.4);
+      position: relative;
+      z-index: 2;
+    }
+
+    .question {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2rem;
+      margin-bottom: 40px;
+      min-height: 100px;
+    }
+
+    .answer-box {
+      padding: 18px 30px;
+      font-size: 1.3rem;
+      background: rgba(0, 40, 80, 0.8);
+      color: white;
+      border: 2px solid var(--ocean-teal);
+      border-radius: 15px;
+      width: 80%;
+      max-width: 500px;
+      margin: 0 auto 30px;
+    }
+
+    .answer-box:focus {
+      outline: none;
+      border-color: var(--bioluminescent);
+      background: rgba(0, 60, 120, 0.9);
+    }
+
+    button {
+      background: linear-gradient(to right, var(--ocean-teal), var(--bioluminescent));
+      color: var(--deep-blue);
+      padding: 18px 45px;
+      border: none;
+      border-radius: 15px;
+      font-weight: bold;
+      font-size: 1.3rem;
+      cursor: pointer;
+      font-family: 'Bebas Neue', sans-serif;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+
+    .response {
+      margin-top: 30px;
+      font-size: 1.5rem;
+      font-weight: bold;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+
+    .response.show {
+      opacity: 1;
+    }
+
+    .correct {
+      color: #00ff88;
+    }
+
+    .incorrect {
+      color: #ff5555;
+    }
+
+    .code-display {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2rem;
+      margin-top: 40px;
+      color: var(--bioluminescent);
+      padding: 20px;
+      border: 1px solid var(--ocean-teal);
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.4);
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .title {
+        font-size: 2.8rem;
+      }
+
+      .question {
+        font-size: 1.6rem;
       }
     }
   </style>
